--- a/debian/rules
+++ b/debian/rules
@@ -33,6 +33,7 @@ $(BUILD)/config.status:
 		--sharedstatedir=/var/lib \
 		--localstatedir=/var/lib \
 		--with-admindir=/var/lib/dpkg \
+		--with-zlib=static \
 		$(config_arg)
 
 clean:
