Fix silly errors

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -62,8 +62,8 @@ NLS_LIBS		= @INTLLIBS@
 
 SSD_LIBS		= @SSD_LIBS@
 
-ZLIB_CFLAGS		= @ZLIBCFLAGS@
-ZLIB_LIBS		= @ZLIBLIBS@
+ZLIB_CFLAGS		= @ZLIB_CFLAGS@
+ZLIB_LIBS		= @ZLIB_LIBS@
 
 ALL_CFLAGS		= $(CFLAGS) $(DEFS) $(NLS_CFLAGS) $(INCLUDE_CFLAGS) $(ZLIB_CFLAGS)
 ALL_CXXFLAGS		= $(ALL_CFLAGS) $(CXXFLAGS)
