Add gettext to build-depends

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Wichert Akkerman <wakkerma@debian.org>
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.1.0
-Build-Depends: debiandoc-sgml, libncurses-dev
+Build-Depends: debiandoc-sgml, libncurses-devr, gettext
 
 Package: dpkg
 Architecture: any
