--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -197,16 +197,50 @@ void m_pipe(int fds[2]);
 void checksubprocerr(int status, const char *description, int sigpipeok);
 void waitsubproc(pid_t pid, const char *description, int sigpipeok);
 
-#define FD_WRITE_BUF 0
-#define FD_WRITE_VBUF 1
-#define FD_WRITE_FD 2
+#define BUFFER_WRITE_BUF 0
+#define BUFFER_WRITE_VBUF 1
+#define BUFFER_WRITE_FD 2
+#define BUFFER_WRITE_NULL 3
+#define BUFFER_WRITE_STREAM 4
+#define BUFFER_READ_FD 0
+#define BUFFER_READ_STREAM 1
 
-typedef void (*do_fd_write_t)(char *, int, void *, char *);
-#define do_fd_copy(fd1, fd2, limit, desc...) read_fd_combined(fd1, (void*)fd2, FD_WRITE_FD, limit, desc)
-#define read_fd_buf(fd1, buf, limit, desc...) read_fd_combined(fd1, buf, FD_WRITE_BUF, limit, desc)
-#define read_fd_vbuf(fd1, buf, limit, desc...) read_fd_combined(fd1, buf, FD_WRITE_VBUF, limit, desc)
-int read_fd_combined(int fd, void *buf, int type, int limit, char *desc, ...);
-int do_fd_read(int fd1, int limit, do_fd_write_t write_proc, void *proc_data, char *desc);
+typedef struct buffer_data *buffer_data_t;
+typedef long (*buffer_proc_t)(buffer_data_t data, void *buf, long size, char *desc);
+struct buffer_data {
+  buffer_proc_t proc;
+  void *data;
+  int type;
+};
+
+#define fd_fd_copy(fd1, fd2, limit, desc...)\
+	buffer_copy_setup((void *)fd1, BUFFER_READ_FD, NULL, \
+			  (void *)fd2, BUFFER_WRITE_FD, NULL, \
+			  limit, desc)
+#define fd_buf_copy(fd, buf, limit, desc...)\
+	buffer_copy_setup((void *)fd, BUFFER_READ_FD, NULL, \
+			  buf, BUFFER_WRITE_BUF, NULL, \
+			  limit, desc)
+#define fd_vbuf_copy(fd, buf, limit, desc...)\
+	buffer_copy_setup((void *)fd, BUFFER_READ_FD, NULL, \
+			  buf, BUFFER_WRITE_VBUF, NULL, \
+			  limit, desc)
+#define fd_null_copy(fd, limit, desc...)\
+	buffer_copy_setup((void *)fd, BUFFER_READ_FD, NULL, \
+			  NULL, BUFFER_WRITE_NULL, NULL, \
+			  limit, desc)
+#define stream_null_copy(file, limit, desc...)\
+	buffer_copy_setup((void *)file, BUFFER_READ_STREAM, NULL, \
+			  NULL, BUFFER_WRITE_NULL, NULL, \
+			  limit, desc)
+#define stream_fd_copy(file, fd, limit, desc...)\
+	buffer_copy_setup((void *)file, BUFFER_READ_STREAM, NULL, \
+			  (void *)fd, BUFFER_WRITE_FD, NULL, \
+			  limit, desc)
+long buffer_copy_setup(void *argIn, int typeIn, void *procIn,
+		       void *argOut, int typeOut, void *procOut,
+		       long limit, char *desc, ...);
+long buffer_copy(buffer_data_t read_data, buffer_data_t write_data, long limit, char *desc);
 
 extern volatile int onerr_abort;
 
