Move -D_GNU_SOURCE from configure.in to Makefile, and from CFLAGS to DEFS. This macro was getting lost if someone was setting CFLAGS on the cmdline. Perhaps this should be moved into config.h.in?

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -54,7 +54,7 @@ LD			= @LD@
 LDFLAGS			= @LDFLAGS@
 LIBS			= @LIBS@
 
-DEFS			= @DEFS@
+DEFS			= @DEFS@ -D_GNU_SOURCE
 INCLUDE_CFLAGS		= -I$(top_srcdir)/include -I$(top_srcdir) -I$(srcdir) -I../include -I.. -I.
 
 NLS_CFLAGS		= -DLOCALEDIR=\"$(localedir)\" -I$(top_srcdir)/intl -I../intl
