--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -206,7 +206,7 @@ void waitsubproc(pid_t pid, const char *description, int sigpipeok);
 #define BUFFER_READ_STREAM 1
 
 typedef struct buffer_data *buffer_data_t;
-typedef long (*buffer_proc_t)(buffer_data_t data, void *buf, long size, char *desc);
+typedef ssize_t (*buffer_proc_t)(buffer_data_t data, void *buf, ssize_t size, char *desc);
 struct buffer_data {
   buffer_proc_t proc;
   void *data;
@@ -243,10 +243,10 @@ struct buffer_data {
 	buffer_copy_setup((void *)file, BUFFER_READ_STREAM, NULL, \
 			  (void *)fd, BUFFER_WRITE_FD, NULL, \
 			  limit, desc)
-long buffer_copy_setup(void *argIn, int typeIn, void *procIn,
+ssize_t buffer_copy_setup(void *argIn, int typeIn, void *procIn,
 		       void *argOut, int typeOut, void *procOut,
-		       long limit, char *desc, ...);
-long buffer_copy(buffer_data_t read_data, buffer_data_t write_data, long limit, char *desc);
+		       ssize_t limit, char *desc, ...);
+ssize_t buffer_copy(buffer_data_t read_data, buffer_data_t write_data, ssize_t limit, char *desc);
 
 extern volatile int onerr_abort;
 
