Modified DPKG_C_GCC_TRY_WARNS() to call AC_SUBST, so that we can use the result of the test during build time.

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -38,6 +38,11 @@ PERL			= @PERL@
 mkinstalldirs		= $(SHELL) $(top_srcdir)/mkinstalldirs
 LN			= @LN_S@
 
+WARN_ALL		= @WARN_ALL@
+WARN_WRITESTRINGS	= @WARN_WRITESTRINGS@
+WARN_POINTERMATH	= @WARN_POINTERMATH@
+WARN_IMPLICIT		= @WARN_IMPLICIT@
+
 CC			= @CC@
 CFLAGS			= @CFLAGS@
 INSTALL			= @INSTALL@
@@ -65,7 +70,7 @@ SSD_LIBS		= @SSD_LIBS@
 ZLIB_CFLAGS		= @ZLIB_CFLAGS@
 ZLIB_LIBS		= @ZLIB_LIBS@
 
-ALL_CFLAGS		= $(CFLAGS) $(DEFS) $(NLS_CFLAGS) $(INCLUDE_CFLAGS) $(ZLIB_CFLAGS)
+ALL_CFLAGS		= $(CFLAGS) $(DEFS) $(NLS_CFLAGS) $(INCLUDE_CFLAGS) $(ZLIB_CFLAGS) $(WARN_ALL) $(WARN_WRITESTRINGS) $(WARN_POINTERMATH) $(WARN_IMPLICIT)
 ALL_CXXFLAGS		= $(ALL_CFLAGS) $(CXXFLAGS)
 
 .c.o:
