Clean up a few gcc warnings.  Note that the warning:   "deprecated conversion from string constant to `char *'" is actually a bug in ncurses-dev(which has been filed as 80410) not setting the fmt argument as const.

--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -245,7 +245,7 @@ struct buffer_data {
 			  limit, desc)
 ssize_t buffer_copy_setup(void *argIn, int typeIn, void *procIn,
 		       void *argOut, int typeOut, void *procOut,
-		       ssize_t limit, char *desc, ...);
+		       ssize_t limit, const char *desc, ...);
 ssize_t buffer_copy(buffer_data_t read_data, buffer_data_t write_data, ssize_t limit, char *desc);
 
 extern volatile int onerr_abort;
