Added depends on sysvinit (>= 2.72), so that we can make sure that /etc/rcS.d exists.

--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Package: dpkg
 Architecture: any
 Essential: yes
 Pre-Depends: ${shlibs:Pre-Depends}
+Depends: sysvinit (>= 2.72)
 Replaces: dpkg-doc-ja
 Description: Package maintenance system for Debian
  This package contains the programs which handle the installation and
