Undo earlier changes from Adam to handle -W options for the compiler and do things much simpler instead based on the old working but not correctly used code.

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -44,7 +44,7 @@ WARN_POINTERMATH	= @WARN_POINTERMATH@
 WARN_IMPLICIT		= @WARN_IMPLICIT@
 
 CC			= @CC@
-CFLAGS			= @CFLAGS@
+CFLAGS			= @CFLAGS@ @CWARNS@
 INSTALL			= @INSTALL@
 INSTALL_PROGRAM		= @INSTALL_PROGRAM@
 INSTALL_DATA		= @INSTALL_DATA@
@@ -70,7 +70,7 @@ SSD_LIBS		= @SSD_LIBS@
 ZLIB_CFLAGS		= @ZLIB_CFLAGS@
 ZLIB_LIBS		= @ZLIB_LIBS@
 
-ALL_CFLAGS		= $(CFLAGS) $(DEFS) $(NLS_CFLAGS) $(INCLUDE_CFLAGS) $(ZLIB_CFLAGS) $(WARN_ALL) $(WARN_WRITESTRINGS) $(WARN_POINTERMATH) $(WARN_IMPLICIT)
+ALL_CFLAGS		= $(CFLAGS) $(DEFS) $(NLS_CFLAGS) $(INCLUDE_CFLAGS) $(ZLIB_CFLAGS) 
 ALL_CXXFLAGS		= $(ALL_CFLAGS) $(CXXFLAGS)
 
 .c.o:
