--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -202,6 +202,7 @@ void waitsubproc(pid_t pid, const char *description, int sigpipeok);
 #define BUFFER_WRITE_FD 2
 #define BUFFER_WRITE_NULL 3
 #define BUFFER_WRITE_STREAM 4
+#define BUFFER_WRITE_MD5 5
 #define BUFFER_READ_FD 0
 #define BUFFER_READ_STREAM 1
 
@@ -212,6 +213,13 @@ struct buffer_data {
   void *data;
   int type;
 };
+
+#define fd_md5(fd, hash, limit, desc...)\
+	buffer_md5_setup((void *)fd, BUFFER_READ_FD, NULL, \
+			  hash, limit, desc)
+#define stream_md5(file, hash, limit, desc...)\
+	buffer_md5_setup((void *)file, BUFFER_READ_STREAM, NULL, \
+			  hash, limit, desc)
 
 #define fd_fd_copy(fd1, fd2, limit, desc...)\
 	buffer_copy_setup((void *)fd1, BUFFER_READ_FD, NULL, \
@@ -246,6 +254,8 @@ struct buffer_data {
 ssize_t buffer_copy_setup(void *argIn, int typeIn, void *procIn,
 		       void *argOut, int typeOut, void *procOut,
 		       ssize_t limit, const char *desc, ...);
+ssize_t buffer_md5_setup(void *argIn, int typeIn, void *procIn,
+		       unsigned char hash[33], ssize_t limit, const char *desc, ...);
 ssize_t buffer_copy(buffer_data_t read_data, buffer_data_t write_data, ssize_t limit, char *desc);
 
 extern volatile int onerr_abort;
