--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -7,7 +7,7 @@ include ../Makefile.conf
 
 SOURCES		= compat.c database.c dbmodify.c dump.c ehandle.c fields.c \
 		    lock.c mlib.c myopt.c nfmalloc.c parse.c parsehelp.c \
-		    showcright.c tarfn.c varbuf.c vercmp.c
+		    showcright.c tarfn.c varbuf.c vercmp.c md5.c
 
 OBJECTS		= $(patsubst %.c, %.o, $(SOURCES))
 GENFILES	= $(OBJECTS) libdpkg.a
