Removed all references to sysinfo().

--- a/configure.in
+++ b/configure.in
@@ -119,7 +119,7 @@ AC_CHECK_SIZEOF(unsigned int)
 AC_CHECK_TYPE(ptrdiff_t,int)
 AC_CHECK_FUNCS(unsetenv alphasort scandir strerror strsignal strtoul)
 AC_CHECK_FUNCS(vsnprintf lchown snprintf)
-AC_CHECK_HEADERS(sys/cdefs.h sys/sysinfo.h syslog.h stddef.h)
+AC_CHECK_HEADERS(sys/cdefs.h syslog.h stddef.h)
 AC_CHECK_HEADERS(error.h)
 AC_SYS_SIGLIST_DECLARED
 
@@ -145,9 +145,6 @@ else
 fi
 AC_SUBST(ZLIB_CFLAGS)
 AC_SUBST(ZLIB_LIBS)
-
-AC_HAVE_SYSINFO
-AC_MEMINFO_IN_SYSINFO
 
 AC_TRY_COMPILE([
 #include <sys/types.h>
