--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -2,7 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
-SUBDIRS		= ja sv
+SUBDIRS		= fr ja sv
 
 include ../Makefile.conf
 
