Add 'warn' parameter to waitsubproc and checksubprocerr, and also add a return value.  This fixes my last checkin, where maintainer_script_alternative would run both the old and new script.

--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -194,8 +194,8 @@ int m_fork(void);
 void m_dup2(int oldfd, int newfd);
 void m_pipe(int fds[2]);
 
-void checksubprocerr(int status, const char *description, int sigpipeok);
-void waitsubproc(pid_t pid, const char *description, int sigpipeok);
+int checksubprocerr(int status, const char *description, int sigpipeok, int warn);
+int waitsubproc(pid_t pid, const char *description, int sigpipeok, int warn);
 
 #define BUFFER_WRITE_BUF 0
 #define BUFFER_WRITE_VBUF 1
