convert nfmalloc to obstack, and include obstack.[ch] for non-GNU systems

--- a/optlib/Makefile.in
+++ b/optlib/Makefile.in
@@ -4,7 +4,7 @@ top_srcdir	= @top_srcdir@
 
 include ../Makefile.conf
 
-SOURCES		= getopt.c getopt1.c long-options.c closeout.c
+SOURCES		= getopt.c getopt1.c long-options.c closeout.c obstack.c
 
 OBJECTS		= $(patsubst %.c, %.o, $(SOURCES))
 GENFILES	= $(OBJECTS) libopt.a
