scripts/dpkg-source.pl: fix error in error message utils/Makefile.in: set top_builddir Makefile.in: spell version-nr correctly scripts/dpkg-source.pl: modify how we handle the dscformat: we now     assume all major versions are upwards and backwards compatibly. This     allows us to add new fields without breaking older versions of     dpkg-source

--- a/Makefile.in
+++ b/Makefile.in
@@ -2,7 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
-VERSION		= $(shell cat verion-nr)
+VERSION		= $(shell cat version-nr)
 
 GENFILES	= version.h
 
