Add basic OpenBSD 2.8/i386 support Fix description for dpkg-gencontrol in the dpkg-source manpage

--- a/configure.in
+++ b/configure.in
@@ -101,6 +101,7 @@ AM_GNU_GETTEXT
 dnl Other stuff
 
 AC_STDC_HEADERS
+AC_PROG_RANLIB
 AC_PROG_LN_S
 AC_CHECK_PROG(RM,rm,rm -f)
 AC_CHECK_PROG(SED,sed,sed)
