switch to using POSIX glob instead of regexp

--- a/debian/rules
+++ b/debian/rules
@@ -208,7 +208,7 @@ binary-dpkg-doc: stamp-binary
 
 # Now that dpkg-dev has been installed, Debianize it
 # Policy stuff
-	gzip -9f $(TMP_DPKG_DOC)/usr/share/doc/dpkg/[^i]*
+	gzip -9f $(TMP_DPKG_DOC)/usr/share/doc/dpkg/[!i]*
 	ln -s dpkg $(TMP_DPKG_DOC)/usr/share/doc/dpkg-doc
 
 # Register documentation with doc-base
