* utils/Makefile.in: Do not use libopt.a, since libdpkg.a not includes those     objects   * optlib/Makefile.in: do not generate libopt.a   * lib/Makefile.in: build libdpkg.a to include the objects from optlib

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -17,7 +17,7 @@ ALL_CFLAGS	+= -DCOPYINGFILE=\"$(copyingfile)\"
 .PHONY: all
 all:: libdpkg.a
 	
-libdpkg.a: $(OBJECTS)
+libdpkg.a: $(OBJECTS) ../opt/*.o
 	$(AR) r $@ $^
 	$(RANLIB) $@
 
