add optlib to -I path

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -60,7 +60,7 @@ LDFLAGS			= @LDFLAGS@
 LIBS			= @LIBS@
 
 DEFS			= @DEFS@ -D_GNU_SOURCE
-INCLUDE_CFLAGS		= -I$(top_srcdir)/include -I$(top_srcdir) -I$(srcdir) -I../include -I.. -I.
+INCLUDE_CFLAGS		= -I$(top_srcdir)/include -I$(top_srcdir) -I$(srcdir) -I../include -I.. -I. -I$(top_srcdir)/optlib
 
 NLS_CFLAGS		= -DLOCALEDIR=\"$(localedir)\" -I$(top_srcdir)/intl -I../intl
 NLS_LIBS		= @INTLLIBS@ 
