--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -17,7 +17,7 @@ ALL_CFLAGS	+= -DCOPYINGFILE=\"$(copyingfile)\"
 .PHONY: all
 all:: libdpkg.a
 	
-libdpkg.a: $(OBJECTS) ../opt/*.o
+libdpkg.a: $(OBJECTS) ../optlib/*.o
 	$(AR) r $@ $^
 	$(RANLIB) $@
 
