utils/start-stop-daemon.c: Add OpenBSD support utils/md5sum.c: include unistd.h to things compile on OpenBSD configure.in: test to see if we need to link to kvm

--- a/configure.in
+++ b/configure.in
@@ -127,6 +127,7 @@ AC_SYS_SIGLIST_DECLARED
 AC_CHECK_LIB(ihash, ihash_create, SSD_LIBS="-lihash $SSD_LIBS")
 AC_CHECK_LIB(ps, proc_stat_list_create, SSD_LIBS="-lps $SSD_LIBS")
 AC_CHECK_LIB(shouldbeinlibc, fmt_past_time, SSD_LIBS="-lshouldbeinlibc $SSD_LIBS")
+AC_CHECK_LIB(kvm, kvm_openfiles, SSD_LIBS="-lkvm $SSD_LIBS")
 AC_SUBST(SSD_LIBS)
 
 AC_ARG_WITH(zlib,
