* ChangeLog: undo file corruption (ugh) * utils/start-stop-daemon.8: fix typo * configure.in: use AC_C_INLINE instead of our own test * lib/nfmalloc, include/dpkg-db.h: remove HAVE_INLINE tests, use extern inline directly * lib/varbuf.c: add inline keyowrd to varbufaddc * optlib/Makefile.in: undo earlier patch and build libopt.a again * lib/Makefile.in: use libopt.a again, and a rule to build it * Makefile.in: build optlib before lib * Makefile.conf.in: add RANLIB * dselect/method.h, dselect/methlist.cc, dselect/method.cc,   dselect/methparse.cc: rename struct option to dselect_option to prevent   conflict with getopt.h * main/help.c: rework do_script a bit to compile without errors * scripts/dpkg-gencontrol.1: add -n option to specify filename * scripts/dpkg-source.1:   + document -n option for dpkg-gencontrol   + fix confusing wording for dpkg-buildpackage -uc option   + fix layout error for dpkg-distaddfile section   + it's DEADJOE, not DEAD_JOEY * scripts/dpkg-architecture.pl:   + apply cleanup patch from Julian Gilbey   + modify gcc regexp to recognize gcc versions like 2.96-ia64-000717 * scripts/dpkg-checkbuilddeps.pl, scripts/dpkg-checkbuilddeps.1: new   script from Joey Hess to check build dependencies * THANKS: Add Joey Hess * scripts/dpkg-parsechangelog.pl:   + support reading changelog from stdin   + remove Linux reference * scripts/dpkg-statoverride.pl: exit with exitcode 1 if we do --list but   don't output anything, and use exitcode 2 if we try to remove a   non-exiting override (unless --force is given). * scripts/dpkg-statoverride.8: document new exitcode for --list * main/main.c, main/dpkg.8: remove --smallmem and --largemem references * scripts/dpkg-buildpackage.sh:   + don't bother to specify architecture settings on commandlines since     we put them in the environment already   + remove debsign support, it's useless and debsign can't handle it   + use DEB_BUILD_ARCH to get build architecture, not DEB_HOST_ARCH   + remove Linux reference * script

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -37,6 +37,13 @@ alternativesdir		= $(sysconfdir)/alternatives
 PERL			= @PERL@
 mkinstalldirs		= $(SHELL) $(top_srcdir)/mkinstalldirs
 LN			= @LN_S@
+INSTALL			= @INSTALL@
+INSTALL_PROGRAM		= @INSTALL_PROGRAM@
+INSTALL_DATA		= @INSTALL_DATA@
+INSTALL_SCRIPT		= @INSTALL_SCRIPT@
+SED			= @SED@
+RM			= @RM@
+
 
 WARN_ALL		= @WARN_ALL@
 WARN_WRITESTRINGS	= @WARN_WRITESTRINGS@
@@ -45,12 +52,6 @@ WARN_IMPLICIT		= @WARN_IMPLICIT@
 
 CC			= @CC@
 CFLAGS			= @CFLAGS@ @CWARNS@
-INSTALL			= @INSTALL@
-INSTALL_PROGRAM		= @INSTALL_PROGRAM@
-INSTALL_DATA		= @INSTALL_DATA@
-INSTALL_SCRIPT		= @INSTALL_SCRIPT@
-SED			= @SED@
-RM			= @RM@
 
 CXX			= @CXX@
 CXXFLAGS		= @CXXFLAGS@
@@ -58,6 +59,8 @@ CXXFLAGS		= @CXXFLAGS@
 LD			= @LD@
 LDFLAGS			= @LDFLAGS@
 LIBS			= @LIBS@
+
+RANLIB			= @RANLIB@
 
 DEFS			= @DEFS@ -D_GNU_SOURCE
 INCLUDE_CFLAGS		= -I$(top_srcdir)/include -I$(top_srcdir) -I$(srcdir) -I../include -I.. -I. -I$(top_srcdir)/optlib
