--- a/Makefile.in
+++ b/Makefile.in
@@ -8,7 +8,7 @@ GENFILES	= version.h
 
 include Makefile.conf
 
-SUBDIRS		= include lib optlib intl dpkg-deb split scripts utils main \
+SUBDIRS		= include optlib lib intl dpkg-deb split scripts utils main \
 		  utils @DSELECTDIR@ po methods doc
 
 all: version.h all-recursive
