--- a/configure.in
+++ b/configure.in
@@ -115,6 +115,7 @@ AC_SIZE_T
 AC_VPRINTF
 AC_C_CONST
 AC_C_BIGENDIAN
+AC_C_INLINE
 AC_CHECK_SIZEOF(unsigned long)
 AC_CHECK_SIZEOF(unsigned int)
 AC_CHECK_TYPE(ptrdiff_t,int)
