--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,7 @@ Package: dpkg-dev
 Section: devel
 Priority: important
 Architecture: all
-Depends: perl5, cpio (>= 2.4.2-2), patch (>= 2.2-1), make, binutils
+Depends: perl5, perl-modules, cpio (>= 2.4.2-2), patch (>= 2.2-1), make, binutils
 Recommends: c-compiler
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname
