--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -16,8 +16,11 @@ ALL_CFLAGS	+= -DCOPYINGFILE=\"$(copyingfile)\"
 
 .PHONY: all
 all:: libdpkg.a
-	
-libdpkg.a: $(OBJECTS) ../optlib/*.o
+
+../optlib/libopt.a:
+	set -e ; cd ../optlib ; $(MAKE) libopt.a
+
+libdpkg.a: $(OBJECTS) ../optlib/libopt.a
 	$(AR) r $@ $^
 	$(RANLIB) $@
 
