French translation update

--- a/doc/fr/Makefile.in
+++ b/doc/fr/Makefile.in
@@ -8,10 +8,11 @@ frman1dir	= $(subst $(mandir),$(mandir)/fr,$(man1dir))
 frman5dir	= $(subst $(mandir),$(mandir)/fr,$(man5dir))
 frman8dir	= $(subst $(mandir),$(mandir)/fr,$(man8dir))
 
-MAN1PAGES	= dpkg-deb.1 md5sum.1
-MAN5PAGES	= deb-old.5 deb.5
-MAN8PAGES	= dpkg.8 dselect.8 install-info.8 start-stop-daemon.8 \
-		  update-alternatives.8 update-rc.d.8
+MAN1PAGES	= dpkg-deb.1 dpkg-name.1 dpkg-source.1 md5sum.1
+MAN5PAGES	= deb-old.5 deb.5 deb-control.5
+MAN8PAGES	= cleanup-info.8 dpkg.8 dpkg-divert.8 dpkg-scanpackages.8 \
+			dpkg-scansources.1 dselect.8 install-info.8 \
+			start-stop-daemon.8 update-alternatives.8 update-rc.d.8
 
 all: 
 
