add debsig-verify support

--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -115,23 +115,24 @@
 
 #define ARCHIVE_FILENAME_PATTERN "*.deb"
 
-#define BACKEND      "dpkg-deb"
-#define SPLITTER     "dpkg-split"
-#define MD5SUM       "md5sum"
-#define DSELECT      "dselect"
-#define DPKG         "dpkg"
+#define BACKEND		"dpkg-deb"
+#define SPLITTER	"dpkg-split"
+#define MD5SUM		"md5sum"
+#define DSELECT		"dselect"
+#define DPKG		"dpkg"
+#define DEBSIGVERIFY	"/usr/bin/debsig-verify"
 
-#define TAR          "tar"
-#define GZIP         "gzip"
-#define RM           "rm"
-#define FIND         "find"
-#define SHELL        "sh"
+#define TAR		"tar"
+#define GZIP		"gzip"
+#define RM		"rm"
+#define FIND		"find"
+#define SHELL		"sh"
 
-#define SHELLENVIR   "SHELL"
+#define SHELLENVIR	"SHELL"
 
 #define FIND_EXPRSTARTCHARS "-(),!"
 
-#define TARBLKSZ     512
+#define TARBLKSZ	512
 
 /* Take care of NLS matters.  */
 
