* configure.in, debian/control: New upstream gettext.  Since we had     to change our build, to comply with the new upstream, we also     need to modify the build-depends.   * po/dpkg.pot, po/nl.po: Fixed broken translations.

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Wichert Akkerman <wakkerma@debian.org>
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.1.0
-Build-Depends: debiandoc-sgml, libncurses-dev, gettext, zlib1g-dev
+Build-Depends: debiandoc-sgml, libncurses-dev, gettext (>= 0.10.36), zlib1g-dev
 
 Package: dpkg
 Architecture: any
