--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -195,8 +195,10 @@ int m_fork(void);
 void m_dup2(int oldfd, int newfd);
 void m_pipe(int fds[2]);
 
-int checksubprocerr(int status, const char *description, int sigpipeok, int warn);
-int waitsubproc(pid_t pid, const char *description, int sigpipeok, int warn);
+#define PROCPIPE 1
+#define PROCWARN 2
+int checksubprocerr(int status, const char *description, int flags);
+int waitsubproc(pid_t pid, const char *description, int flags);
 
 #define BUFFER_WRITE_BUF 0
 #define BUFFER_WRITE_VBUF 1
