--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -197,6 +197,7 @@ void m_pipe(int fds[2]);
 
 #define PROCPIPE 1
 #define PROCWARN 2
+#define PROCNOERR 4
 int checksubprocerr(int status, const char *description, int flags);
 int waitsubproc(pid_t pid, const char *description, int flags);
 
