Use INSTALL_PROGRAM for programs

--- a/dselect/Makefile.in
+++ b/dselect/Makefile.in
@@ -36,7 +36,7 @@ install:: install-program install-doc
 .PHONY: install-program
 install-program:
 	$(mkinstalldirs) $(DESTDIR)/$(bindir)
-	$(INSTALL) dselect $(DESTDIR)/$(bindir)
+	$(INSTALL_PROGRAM) dselect $(DESTDIR)/$(bindir)
 
 .PHONY: install-doc
 install-doc:
