--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -34,7 +34,7 @@ install:: install-program install-doc
 .PHONY: install-program
 install-program:
 	$(mkinstalldirs) $(DESTDIR)/$(bindir)
-	$(INSTALL) dpkg $(DESTDIR)/$(bindir)
+	$(INSTALL_PROGRAM) dpkg $(DESTDIR)/$(bindir)
 	$(mkinstalldirs) $(DESTDIR)/$(admindir)/alternatives
 	$(mkinstalldirs) $(DESTDIR)/$(admindir)/info
 	$(mkinstalldirs) $(DESTDIR)/$(admindir)/updates
