Really install French manpages

--- a/debian/rules
+++ b/debian/rules
@@ -93,7 +93,7 @@ binary-dpkg: stamp-binary
 	set -e ; for i in ChangeLog THANKS TODO copyright ; do \
 		mv $(TMP)/usr/share/doc/dpkg/$$i $(TMP_DPKG)/usr/share/doc/dpkg/ ; \
 	done
-	set -e ; for i in "" ja sv ; do \
+	set -e ; for i in "" fr ja sv ; do \
 		install -d -m 755 -o root -g root $(TMP_DPKG)/usr/share/man/$$i/man1 ; \
 		for m in md5sum.1 dpkg-deb.1 ; do \
 			if [ -f $(TMP)/usr/share/man/$$i/man1/$$m ] ; then \
@@ -164,7 +164,7 @@ binary-dpkg-dev: stamp-binary
 		dpkg-parsechangelog dpkg-checkbuilddeps ; do \
 		mv $(TMP)/usr/bin/$$i $(TMP_DPKG_DEV)/usr/bin/ ; \
 	done
-	set -e ; for i in "" ja sv ; do \
+	set -e ; for i in "" fr ja sv ; do \
 		install -d -m 755 -o root -g root $(TMP_DPKG_DEV)/usr/share/man/$$i/man1 ; \
 		for m in dpkg-name.1 dpkg-source.1 822-date.1 dpkg-architecture.1 \
 			dpkg-buildpackage.1 dpkg-distaddfile.1 dpkg-genchanges.1 \
