Install enoent in the dpkg package

--- a/debian/rules
+++ b/debian/rules
@@ -85,6 +85,7 @@ binary-dpkg: stamp-binary
 	mv $(TMP)/usr/sbin/start-stop-daemon $(TMP_DPKG)/sbin/
 	mv $(TMP)/usr/sbin $(TMP_DPKG)/usr/
 	mv $(TMP)/usr/lib/dpkg/mksplit $(TMP_DPKG)/usr/lib/dpkg/
+	mv $(TMP)/usr/lib/dpkg/enoent $(TMP_DPKG)/usr/lib/dpkg/
 	mv $(TMP)/usr/lib/dpkg/methods $(TMP_DPKG)/usr/lib/dpkg/
 	mv $(TMP)/usr/share/locale $(TMP_DPKG)/usr/share/
 	set -e ; for i in dpkg dpkg-deb dpkg-split md5sum dselect ; do \
