Changed to include no-debsig by default, as no debs are currently signed, and we get false errors when debsig-verify is installed.  This will be removed in the future, when the archive tools support package signatures.

--- a/debian/dpkg.cfg
+++ b/debian/dpkg.cfg
@@ -4,4 +4,4 @@
 # options are allowed. Values can be specific by putting them after
 # the option, seperated by whitespace and/or an `=' sign.
 #
-
+no-debsig
