Update section and prioriyies to match dinstall overrides

--- a/debian/control
+++ b/debian/control
@@ -25,8 +25,8 @@ Description: Package maintenance system for Debian
  install the developers' package `dpkg-dev' as well as this one.
 
 Package: dpkg-dev
-Section: devel
-Priority: important
+Section: utils
+Priority: standard
 Architecture: all
 Depends: perl5, perl-modules, cpio (>= 2.4.2-2), patch (>= 2.2-1), make, binutils
 Recommends: c-compiler
@@ -41,8 +41,8 @@ Description: Package building tools for Debian
  for example, most packages need the `make' and the C compiler `gcc'.
 
 Package: dpkg-doc
-Section: doc
-Priority: extra
+Section: docs
+Priority: optional
 Architecture: all
 Replaces: dpkg-dev (<<1.4.1.19)
 Description: Dpkg Internals Documentation
