--- a/configure.in
+++ b/configure.in
@@ -169,6 +169,22 @@ AC_TRY_COMPILE([
 AC_TRY_COMPILE(,[
 } inline int foo (int x) {], AC_DEFINE(HAVE_INLINE))
 
+AC_MSG_CHECKING([for __va_copy])
+AC_TRY_COMPILE([
+#include <stdarg.h>
+],[
+va_list v1,v2;
+__va_copy(v1, v2);
+], [AC_MSG_RESULT(yes)
+AC_DEFINE(HAVE_VA_COPY)],[AC_MSG_RESULT(no)
+AC_MSG_CHECKING([for va_list assignment copy])
+AC_TRY_COMPILE([
+#include <stdarg.h>
+],[
+va_list v1,v2;
+v1 = v2;
+], AC_MSG_RESULT(yes),AC_MSG_ERROR(no))])
+
 DPKG_CACHED_TRY_COMPILE(__attribute__((,,)),dpkg_cv_c_attribute_supported,,
  [extern int testfunction(int x) __attribute__((,,))],
  AC_MSG_RESULT(yes)
