Split out code for commands -sSlLp into a separate binary, dpkg-query, and have the normal dpkg binary exec this.  Also, dpkg now uses a macro to define external backends to call.

--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -116,6 +116,7 @@
 #define ARCHIVE_FILENAME_PATTERN "*.deb"
 
 #define BACKEND		"dpkg-deb"
+#define DPKGQUERY	"dpkg-query"
 #define SPLITTER	"dpkg-split"
 #define MD5SUM		"md5sum"
 #define DSELECT		"dselect"
