Discovered that if anything in optlib/ was actually needed, it wasn't being included.  Modified LDFLAGS to include -L../optlib, and moved -ldpkg and -loptlib to LDFLAGS as well.

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -51,8 +51,8 @@ CXX			= @CXX@
 CXXFLAGS		= @CXXFLAGS@
 
 LD			= @LD@
-LDFLAGS			= @LDFLAGS@
-LIBS			= @LIBS@
+LDFLAGS			= @LDFLAGS@ -L../lib -L../optlib
+LIBS			= @LIBS@ -ldpkg -lopt $(ZLIB_LIBS)
 
 RANLIB			= @RANLIB@
 
