--- a/doc/ja/Makefile.in
+++ b/doc/ja/Makefile.in
@@ -8,10 +8,13 @@ jaman1dir	= $(subst $(mandir),$(mandir)/ja,$(man1dir))
 jaman5dir	= $(subst $(mandir),$(mandir)/ja,$(man5dir))
 jaman8dir	= $(subst $(mandir),$(mandir)/ja,$(man8dir))
 
-MAN1PAGES	= dpkg-deb.1 md5sum.1
-MAN5PAGES	= deb-old.5 deb.5
+MAN1PAGES	= dpkg-deb.1 md5sum.1 822-date.1 dpkg-name.1 \
+		  dpkg-checkbuilddeps.1
+MAN5PAGES	= deb-old.5 deb.5 deb-control.5
 MAN8PAGES	= dpkg.8 dselect.8 install-info.8 start-stop-daemon.8 \
-		  update-alternatives.8 update-rc.d.8
+		  update-alternatives.8 update-rc.d.8 \
+		  cleanup-info.8 dpkg-divert.8 \
+		  dpkg-scanpackages.8 dpkg-scansources.8 \
 
 all: 
 
